--- a/docs/Manual.tex
+++ b/docs/Manual.tex
@@ -15,7 +15,7 @@
 
 \providecommand{\boldsymbol}[1]{\mbox{\boldmath $#1$}}
 
-\def\minionversion{1.8}
+\def\minionversion{2.0.0-rc1}
 
 \begin{document}
 
