Update dumptreejson flag

--- a/docs/latexhelp/doc.tex
+++ b/docs/latexhelp/doc.tex
@@ -2156,19 +2156,19 @@ replacing 'minion' by the name of the executable you're using.
     help switches -sollimit
 \end{verbatim}
 }
-\section{switches -dumpjsontree}
-\paragraph{Description}
-{\footnotesize
-\begin{verbatim}
-    Print out the branching decisions and variable states at each node.
-    Accepts filename to output tree to
-\end{verbatim}
-}
 \section{switches -dumptree}
 \paragraph{Description}
 {\footnotesize
 \begin{verbatim}
     Print out the branching decisions and variable states at each node.
+\end{verbatim}
+}
+\section{switches -dumptreejson}
+\paragraph{Description}
+{\footnotesize
+\begin{verbatim}
+    Print out the branching decisions and variable states at each node.
+    Accepts filename to output tree to
 \end{verbatim}
 }
 \section{switches -findallsols}
